2005-03-09  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Init, Spacing).
	
2005-03-04  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Smallbox, Render).

2005-03-03  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Question).

2005-02-14  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/i*.sgml: More documentation.

2005-02-13  Florian Boor <florian@kernelconcepts.de>

	* gpehelp.c: Add support for gpe-helpviewer. Use PREFIX for apps to call.
	* doc/tmpl/*.sgml: More documentation (GpeDateCombo).

2005-02-07  Florian Boor <florian@kernelconcepts.de>

	* doc/style.css: Added style definition file for documentation.
	
2005-02-07  Florian Boor <florian@kernelconcepts.de>

	* Makefile: Don't build documentation per default.
	* doc/tmpl/gpetimesel.sgml: More documentation.
	
2005-02-02  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (GpeIconList*).

2005-02-02  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: Documentation improvement.

2005-01-31  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: Documentation improvement.
	* gpehelp.c: Formating fix, fixed typo.

2005-01-28  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/gpeclockface.sgml: Documentation improvement.
	* doc/tmpl/gpeiconlist.sgml: Documentation improvement.

2005-01-27  Florian Boor <florian@kernelconcepts.de>

	* doc/*: Add documentation framework.
	* Makefile: Add stuff to build documentation (target: doc). 

2005-01-05  Phil Blundell  <philb@gnu.org>

	* Version 0.97 released.
	
2005-01-05  Phil Blundell  <philb@gnu.org>

	* Makefile (MEMBERS): Remove what, gpetooltips2.
	* init.c (gpe_application_init): Don't call gpe_what_init.
	* what.c, what.h, gpetooltips2.c: Deleted.

2004-11-27  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.96 released.

2004-11-16  Phil Blundell  <pb@nexus.co.uk>
